# mush3p

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  paper_fig1.py  paper_fig2.py  paper_fig3.py  paper_figures.py  pyproject.toml  sensitivity.py  setup.cfg
agate/: __init__.py  boundary_conditions.py  example.py  model.py  output.py  params.py  solver.py  static_settings.py
agate/full/: model.py
agate/model/: __init__.py  full.py  full_nonlinear_gas_fraction_solve.py  ideal.py  incompressible.py  instant.py  reduced.py
agate/tests/: test_params.py
docs/: index.md  models.md
mush3p/: __init__.py  output.py
requirements/: dev.txt  requirements.txt
search/: search_index.json
tests/: test_example_script.py  test_params.py  test_solvers.py
