[tool.poetry]
name = "mush3p"
version = "0.3.3"
description = "Simulate steady solidification of a three-phase mushy layer"
authors = ["Joseph Fishlock <joseph.fishlock@physics.ox.ax.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1"
scipy = "^1.14"


[tool.poetry.group.tests.dependencies]
pytest = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
