[metadata]
name = agate
version = attr: agate.__version__
author = Joseph Fishlock
author_email = joseph.fishlock@physics.ox.ac.uk
description = Python package for running steady state simulations of mushy layers with bubbles.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    SciencePlots

[options.extras_require]
dev = 
    black
    mypy 
    pylint

[options.package_data]
* = README.md
